Fix shifting layout width

--- a/style.scss
+++ b/style.scss
@@ -1,4 +1,4 @@
-$font: Outfit;
+$font: Outfit, sans-serif;
 $white: hsl(0, 0%, 100%);
 $light-gray: hsl(212, 45%, 89%);
 $grayish-blue: hsl(220, 15%, 55%);
@@ -12,21 +12,23 @@ body {
     background: $light-gray;
 }
 
-// Mobile-first
 main {
     display: flex;
-    align-content: center;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
 }
+
 .container {
     display: flex;
     flex-direction: column;
     background: $white;
-    margin: 0 auto;
     justify-content: center;
     align-items: center;   
     margin: 1.4em;
-    padding: 1em 0.5em;
+    padding: 1em 1em;
     border-radius: 20px;
+    width: min-content;
     img {
         width: 19em;
         height: 19em;
@@ -39,7 +41,7 @@ main {
         padding: 1em;
         .first-text {
             font-weight: 700;
-            font-size: 1.5rem;
+            font-size: 1.42rem;
             color: $dark-blue;
             margin: 0;
             padding: 0.3em;
